--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta title="Pixel Filter">
-		<link rel="icon" href="boat.jpg"> 
-		<link rel="stylesheet" type="text/css" href="./stylesheet.css"> 
-		<script src="./app.js" type="text/javascript"></script>
+
+		<link rel="icon" href="images/teleguiada.jpeg"> 
+		<link rel="stylesheet" type="text/css" href="./libs/materialize/materialize.min.css"> 
+		
+		<script src="./libs/materialize/materialize.min.js" type="text/javascript"></script>
+		<script src="./js/app.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<div><h1>Pixel Filter</h1></div>
-		<div id="root"></div>
+		<div class="container">
+			<div><h1>Pixel Filter</h1></div>
+			<div id="root"></div>
+			<div>
+				<form>
+					<div class="row">
+						<div class="input-field col m10">
+							<input id="qnt" type="text">
+							<label for="qnt">Pixel Size</label>
+						</div>
+						<div class="input-field col m2">
+							<a class="btn" onclick="clickButtonFilter()">Filter</a>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
 	</body>
 </html>
