new structure and image examples

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 		<meta charset="UTF-8">
 		<meta title="Pixel Filter">
 		<link rel="icon" href="boat.jpg"> 
+		<link rel="stylesheet" type="text/css" href="./stylesheet.css"> 
 		<script src="./app.js" type="text/javascript"></script>
 	</head>
 	<body>
+		<div><h1>Pixel Filter</h1></div>
 		<div id="root"></div>
 	</body>
 </html>
